samples/_failures_safe/1761076231_e7c00c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0ba15dbc.c: In function ‘main’:
./samples/SAFE/__tmp_0ba15dbc.c:134:9: error: ‘cleanup_compression’ undeclared (first use in this function); did you mean ‘cleanup_compression_context’?
  134 |         cleanup_compression
      |         ^~~~~~~~~~~~~~~~~~~
      |         cleanup_compression_context
./samples/SAFE/__tmp_0ba15dbc.c:134:9: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_0ba15dbc.c:134:28: error: expected ‘;’ at end of input
  134 |         cleanup_compression
      |                            ^
      |                            ;
./samples/SAFE/__tmp_0ba15dbc.c:134:9: error: expected declaration or statement at end of input
  134 |         cleanup_compression
      |         ^~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_0ba15dbc.c:134:9: error: expected declaration or statement at end of input
